--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,6 +1,19 @@
 <!doctype html>
 <head>
 	<title>testing</title>
+	<style>
+		* {
+			margin: 0;
+			padding: 0;
+			box-sizing: border-box;
+		}
+		
+		html, body {
+			height: 100%;
+			margin: 0;
+			padding: 0;
+		}
+	</style>
 	<script type="module" src="./bundle.js"></script>
 </head>
 <body>
