--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
 	<title>testing</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<style>
 		* {
 			margin: 0;
@@ -12,6 +13,13 @@
 			height: 100%;
 			margin: 0;
 			padding: 0;
+			font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+			-webkit-text-size-adjust: 100%;
+			-webkit-tap-highlight-color: transparent;
+		}
+
+		input, select, textarea {
+			font-size: 16px;
 		}
 	</style>
 	<script type="module" src="./bundle.js"></script>
