--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <head>
+	<meta charset="UTF-8">
 	<title>testing</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<style>
